# electronics-homeassistant-lightscontroll

./: .gitmodules  README.es.md  README.md
.github/workflows/: kibot..yaml  kibot.yaml
PCB/schematics-v16-espinside/: Readme.md
PCB/schematics-v16-espinside-jlcpcb/: Readme.md
PCB/schematics-v17/: Readme.md
PCB/schematics-v17-safety-jlcpcb/: Readme.md
PCB/schematics-v18/: Readme.md
PCB/schematics-v21-esp32s3/: Readme.md
PCB/schematics-v21-esp32s3-pcbway/: Readme.md
PCB/schematics-v26.8/: Readme.md
PCB/schematics-v27-jlcpcb/: Readme.md
PCB/schematics-v28.2-jlcpcb/: Readme.md
demo-01/: README.md  circuitlayout.brd
demo-02/: README.md
demo-03/: README.md
demo-05/: README.md
demo-1/: README.md  circuitlayout.brd
demo-10-8-segment/: Readme.md
demo-11-esphome-module/: EspHome.yml  Readme.md  esp32 useful pinout.xlsx
demo-11-esphome-module/schematics-v03/: SCH_carlos esp32 done_2021-08-30.json
demo-11-esphome-module/schematics-v3/: LCSC_Exported_20210830_211515.csv  PCB_PCB_carlos esp32 copy_2021-08-30.json
demo-2/: README.md
demo-3/: README.md
demo-5/: README.md
demo-6/: README.md
demo-7/: README.md
demo-8/: README.md
demo-9/: Readme.md
device-label/: label-design.pptx
esphome-configurations/: EspHome-v22.yml  EspHome.yml
simulations/: simulation-temp.md
tester-code/idf/lightcontrol/components/tcal6416/: CMakeLists.txt  README.md  idf_component.yml
tester-code/idf/lightcontrol/components/tcal6416/include/: tcal6416.h  tcal6416.hpp
tester-code/idf/lightcontrol/components/tcal6416/src/: tcal6416.c  tcal6416.cpp
(+1647 files in other folders)
